# echocheck-web

./: .env.example  .gitignore  Makefile  README.md
.github/workflows/: ci.yml
backend/: Makefile  README.md  pyproject.toml  ruff.toml  test_article.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/middleware/: auth.py
backend/app/models/: auth.py  schemas.py
backend/app/routers/: auth.py  classify.py  feedback.py
backend/app/services/: __init__.py  classifier.py  database.py  email.py  feedback.py  file_extractor.py  jwt.py  password.py  users.py  verification.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_classify.py  test_email.py  test_feedback.py  test_file_extractor.py  test_file_upload.py  test_jwt.py  test_password.py  test_validation.py
frontend/: biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/classify/: classification-form.tsx  classification-results.tsx
frontend/src/components/layout/: footer.tsx  header.tsx
frontend/src/components/providers/: auth-provider.tsx  theme-provider.tsx
frontend/src/components/ui/: dropdown-menu.tsx  label.tsx  progress.tsx  sheet.tsx  tabs.tsx  toast.tsx  toaster.tsx  tooltip.tsx  use-toast.ts
frontend/src/lib/: api.ts
frontend/src/pages/: about.tsx  auth.tsx  home.tsx
frontend/src/services/: auth.service.ts  classify.service.ts  feedback.service.ts
frontend/src/test/: setup.ts
